manifests/weather-deployment-imperial.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: weather-app
spec:
  replicas: 3
  selector:
    matchLabels:
            app: weather-app
  template:
    metadata:
      labels:
        app: weather-app
        version: 0.2.0-SNAPSHOT
    spec:
      containers:
      - name: weather-app
        image: registry.env.intra.local.ch/alex/k8s-demo:0.2.0-SNAPSHOT
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          readOnly: true
          mountPath: /opt/
      imagePullSecrets:
      - name: demo-key
      volumes:
      - name: config-volume
        secret:
          secretName: weather-config-prod
